crates/test-generator/tests/snapshots/ts/test_generated_rest_type.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
type RestTuple = [string, ...number[]];

AST:
(program
  (type_alias_declaration
    name: (type_identifier "RestTuple")
    value: (tuple_type
      (predefined_type "string")
      (rest_type
        (array_type
          (predefined_type "number")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:6 to 1:15 }, name: "RestTuple", definition_type: TypeDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(true) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
