crates/test-generator/tests/snapshots/ts/test_generated_string1.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
"test"

AST:
(program
  (expression_statement
    (string
      (string_fragment)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
