crates/test-generator/tests/snapshots/ts/test_generated_subscript_expression.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
arr3[i2]

AST:
(program
  (expression_statement
    (subscript_expression
      object: (identifier "arr3")
      index: (identifier "i2")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:1 to 1:5 }, name: "arr3", kind: Identifier, context: None },
        Usage { position: { 1:6 to 1:8 }, name: "i2", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
